.metadata/.plugins/org.eclipse.cdt.ui/inet-framework-simulte-afd56c4.build.log
00:32:55 **** Incremental Build of configuration gcc-debug for project inet-framework-simulte-afd56c4 ****
make MODE=debug CONFIGNAME=gcc-debug -j4 all 
cd src && make
make[1]: Entering directory '/home/joelias/Dropbox/UFF/Pesquisa/lte-battery/inet-framework-simulte-afd56c4/src'
battery/BatteryAccess.cc
battery/BaseBattery.cc
battery/BaseModule.cc
battery/SimpleBattery.cc
battery/BatteryStats.cc
epc/TrafficFlowFilter.cc
epc/TrafficFlowFilterSimplified.cc
In file included from battery/BatteryStats.h:20:0,
                 from battery/SimpleBattery.cc:20:
battery/SimpleBattery.cc: In member function 'virtual void SimpleBattery::initialize(int)':
battery/BaseModule.h:35:18: error: 'ev' was not declared in this scope
 #define debugEV (ev.isDisabled()||!debug) ? ev : ev << logName() << "::" << getClassName() << ": "
                  ^
battery/SimpleBattery.cc:92:3: note: in expansion of macro 'debugEV'
   debugEV<< "capacity = " << capmAh << "mA-h (nominal = " << nominalCapmAh <<
   ^
battery/SimpleBattery.cc: In member function 'virtual int SimpleBattery::registerDevice(const string&, int)':
battery/BaseModule.h:35:18: error: 'ev' was not declared in this scope
 #define debugEV (ev.isDisabled()||!debug) ? ev : ev << logName() << "::" << getClassName() << ": "
                  ^
battery/SimpleBattery.cc:174:2: note: in expansion of macro 'debugEV'
  debugEV<< "initialized device " << devices[deviceID].name << " as device "
  ^
battery/SimpleBattery.cc: In member function 'virtual void SimpleBattery::draw(int, DrawAmount&, int)':
battery/BaseModule.h:35:18: error: 'ev' was not declared in this scope
 #define debugEV (ev.isDisabled()||!debug) ? ev : ev << logName() << "::" << getClassName() << ": "
                  ^
battery/SimpleBattery.cc:197:3: note: in expansion of macro 'debugEV'
   debugEV << simTime() << " device " << deviceID <<
   ^
battery/BaseModule.h:35:18: error: 'ev' was not declared in this scope
 #define debugEV (ev.isDisabled()||!debug) ? ev : ev << logName() << "::" << getClassName() << ": "
                  ^
battery/SimpleBattery.cc:219:3: note: in expansion of macro 'debugEV'
   debugEV << simTime() << " device " << deviceID <<
   ^
battery/SimpleBattery.cc: In member function 'virtual void SimpleBattery::deductAndCheck()':
battery/BaseModule.h:35:18: error: 'ev' was not declared in this scope
 #define debugEV (ev.isDisabled()||!debug) ? ev : ev << logName() << "::" << getClassName() << ": "
                  ^
battery/SimpleBattery.cc:316:3: note: in expansion of macro 'debugEV'
   debugEV<< simTime() << " residual capacity = " << residualCapacity << " fill state is " << estimateResidualRelative()*100.0 << "%" << endl;
   ^
battery/SimpleBattery.cc: In member function 'virtual void SimpleBattery::finish()':
battery/BaseModule.h:35:18: error: 'ev' was not declared in this scope
 #define debugEV (ev.isDisabled()||!debug) ? ev : ev << logName() << "::" << getClassName() << ": "
                  ^
battery/SimpleBattery.cc:423:3: note: in expansion of macro 'debugEV'
   debugEV << "device " << i << " (" << devices[i].name << ") consumed "
   ^
In file included from battery/SimpleBattery.cc:27:0:
../../inet/src/inet/common/FindModule.h: In instantiation of 'static T inet::FindModule<T>::findSubModule(const omnetpp::cModule*) [with T = BatteryStats*]':
battery/SimpleBattery.cc:441:58:   required from here
../../inet/src/inet/common/FindModule.h:28:36: warning: 'omnetpp::cModule* omnetpp::cModule::SubmoduleIterator::operator()() const' is deprecated (declared at /home/joelias/omnetpp-5.0/include/omnetpp/cmodule.h:161) [-Wdeprecated-declarations]
             cModule *const sub = i();
                                    ^
epc/gtp/TftControlInfo.cc
In file included from battery/BatteryStats.h:20:0,
                 from battery/BatteryStats.cc:29:
battery/BatteryStats.cc: In member function 'virtual void BatteryStats::initialize(int)':
battery/BaseModule.h:35:18: error: 'ev' was not declared in this scope
 #define debugEV (ev.isDisabled()||!debug) ? ev : ev << logName() << "::" << getClassName() << ": "
                  ^
battery/BatteryStats.cc:45:5: note: in expansion of macro 'debugEV'
     debugEV << "show details = " << doDetail << endl;
     ^
epc/gtp/GtpUser.cc
epc/TrafficFlowFilterSimplified.cc: In member function 'EpcNodeType TrafficFlowFilterSimplified::selectOwnerType(const char*)':
epc/TrafficFlowFilterSimplified.cc:41:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make[1]: *** [../out/gcc-debug/src/battery/SimpleBattery.o] Error 1
make[1]: *** Waiting for unfinished jobs....
Makefile:343: recipe for target '../out/gcc-debug/src/battery/SimpleBattery.o' failed
epc/gtp/GtpUser.cc: In member function 'void GtpUser::handleFromUdp(GtpUserMsg*)':
epc/gtp/GtpUser.cc:104:39: warning: unused variable 'nextTeid' [-Wunused-variable]
     TunnelEndpointIdentifier oldTeid, nextTeid;
                                       ^
make[1]: *** [../out/gcc-debug/src/battery/BatteryStats.o] Error 1
Makefile:343: recipe for target '../out/gcc-debug/src/battery/BatteryStats.o' failed
make: *** [all] Error 2
make[1]: Leaving directory '/home/joelias/Dropbox/UFF/Pesquisa/lte-battery/inet-framework-simulte-afd56c4/src'
Makefile:2: recipe for target 'all' failed

00:33:06 Build Finished (took 11s.444ms)

